--- a/package.json
+++ b/package.json
@@ -3,17 +3,11 @@
   "version": "1.0.0",
   "description": "my chef app",
   "workspaces": [
-    "frontend",
-    "backend"
+    "client",
+    "server"
   ],
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\"",
-    "build": "npm run build --prefix client && npm run build --prefix server",
-    "start": "npm run start --prefix server && serve -s client/dist",
-    "client:dev": "npm run dev --prefix client",
-    "server:dev": "npm run dev --prefix server",
-    "client:build": "npm run build --prefix client",
-    "server:build": "npm run build --prefix server",
+    "dev": "concurrently \"npm run dev --prefix server\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
