--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,17 @@
 {
   "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "module": "index.ts",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "drizzle-kit": "^0.25.0",
-    "drizzle-orm": "^0.34.1",
-    "hono": "^4.6.3",
-    "pg": "^8.13.0"
+    "dev": "bun --watch index.ts"
   },
   "devDependencies": {
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "hono": "^4.6.3"
   }
 }
