--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server"
   ],
   "scripts": {
+    "format": "npx prettier --write .",
     "dev": "concurrently \"npm run dev --prefix server\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +22,14 @@
   },
   "homepage": "https://github.com/thullyDev/kota#readme",
   "devDependencies": {
-    "concurrently": "^9.0.1"
+    "@types/pg": "^8.11.10",
+    "concurrently": "^9.0.1",
+    "drizzle-kit": "^0.25.0",
+    "tsx": "^4.19.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.34.1",
+    "pg": "^8.13.0"
   }
 }
