[update] did the scheme.ts, and drizzle setup

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "format": "npx prettier --write .",
     "dev": "concurrently \"npm run dev --prefix server\"",
+    "db:generate": "npm run db:generate --prefix server",
+    "db:migrate": "npm run db:migrate --prefix server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
