--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "hono": "^4.6.3"
   }
