--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/crypto-js": "^4.2.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
-    "hono": "^4.6.3"
+    "hono": "^4.6.3",
+    "slugify": "^1.6.6"
   }
 }
