[update] did the paths

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "format": "npx prettier --write .",
-    "dev": "concurrently \"npm run dev --prefix server\"",
+    "dev": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix client\"",
     "db:generate": "npm run db:generate --prefix server",
     "db:migrate": "npm run db:migrate --prefix server",
     "test": "echo \"Error: no test specified\" && exit 1"
